--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <input type="text" name="check" class="form-control" id="check" value="1200">
                 
 
-                <label for="work">количество рабочих дней в месяц</label>
+                <label for="work">количество рабочих дней в месяце</label>
                     <input type="text" name="work" class="form-control" id="work" value="15">
             </div>
            
