--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="container">
         <div class="row mt-5">
 
-            <div class="col-md-3 text-center form-group">
+            <div class="text-center form-group" style="width: 500px; max-width: 100%">
                 <h6>Стоимость оборудования ($):</h6>
                 <div class="range-box">
-                    <input type="range" name="invest" id="invest" min="10000" max="100000" step="500" value="15000">
+                    <input type="range" name="invest" id="invest" min="10000" max="100000" step="500" value="16000">
                     <input type="text" class="form-control" name="rangeBox" id="rangeBox">
                 </div>
 
@@ -36,10 +36,14 @@
            
         </div>
         <div class="row mt-3">
-            <div class="col-md-3">
+            <div style="width: 500px; max-width: 100%">
                 <div class="result-block">
                     <h4>Окупаемость месяцев:</h4>
                     <input type="text" name="result" class="form-control" id="result">
+                    <div class="result-time mt-3">
+                        <h6>Ориентировочная дата окупаемости</h6>
+                        <span></span>
+                    </div>
                 </div>
             </div>
         </div>
