Add currency USD by PrivatBank API

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <div class="row mt-5">
 
             <div class="text-center form-group" style="width: 500px; max-width: 100%">
+                <h6 class="currencyDate">Текущий курс доллара по ПриватБанку на <span></span>:</h6>
+                <div class="currency-usd mb-4"></div>
                 <h6>Стоимость оборудования ($):</h6>
                 <div class="range-box">
                     <input type="range" name="invest" id="invest" min="10000" max="100000" step="500" value="16000">
