--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <input type="text" name="clients" class="form-control" id="clients" value="5">
                 
 
-                <label for="check">Средний чек</label>
+                <label for="check">Средний чек, грн</label>
                     <input type="text" name="check" class="form-control" id="check" value="1200">
                 
 
